[tool.poetry]
name = "testing-ground"
version = "0.1.0"
description = ""
authors = ["hydr0nium <37932436+hydr0nium@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
test_script = "testing_ground.test:main" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
